Fix tiny search button on mobile

--- a/src/app/shell/Header.m.scss
+++ b/src/app/shell/Header.m.scss
@@ -254,6 +254,7 @@ $header-height: 44px;
 }
 
 .searchButton {
+  composes: resetButton from '../dim-ui/common.m.scss';
   display: none;
 
   @include phone-portrait {
